--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,18 @@
+.appBody {
+  min-height: 95vh;
+}
+
 input {
   margin: 10px;
+  height: 30px;
+  width: 220px;
+  border-radius: 4px;
 }
 
 button {
   margin-top: 5px;
+  height: 25px;
+  width: auto;
 }
 
 .registration {
