Website Manager Page created for Admin's user

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,13 @@ button {
   width: auto;
 }
 
+.center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .registration {
   display: flex;
   align-items: center;
