--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,6 +20,7 @@ button {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  padding-top: 30px;
 }
 
 .registration {
