Study info related table created in WebsiteManager component

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,6 +23,10 @@ button {
   padding-top: 30px;
 }
 
+.button-padding-top{
+  padding-top: 30px;
+}
+
 .registration {
   display: flex;
   align-items: center;
